...
        android:textSize="@dimen/text_sm"
        android:textStyle="italic"
        android:layout_marginStart="16dp"
        android:text="@string/alert_hadiah" />

    <Button
        android:id="@+id/getBookBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/redButton"
        android:text="@string/buku_200_coin" />

    <Button
        android:id="@+id/getPencilBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/redButton"
...
