<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".activity.StartQuizActivity">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/blackMediumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Soal 7/20"
            android:textSize="@dimen/text_m"
            android:layout_centerVertical="true"
            android:id="@+id/question_indicator_textview"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_timer"
            app:tint="@color/blue"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@id/timer_indicator_textview"
            android:layout_centerVertical="true"/>

        <TextView
            style="@style/blackMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5:46"
            android:textSize="@dimen/text_m"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/timer_indicator_textview"/>
    </RelativeLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:indicatorColor="@color/main_red"
        tools:progress="40"
        android:id="@+id/question_progress_indicator"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_below="@id/questionImageView"
                    style="@style/whiteMediumText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="What is android OS?"
                    android:textSize="@dimen/text_m"
                    android:padding="16dp"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/main_red"
                    android:gravity="center"
                    android:layout_marginVertical="8dp"
                    android:id="@+id/question_textview"/>

                <ImageView
                    android:id="@+id/questionImageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_marginVertical="8dp"
                    />
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="@color/gray"
                tools:text="Ans A"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_m"
                android:id="@+id/btn0" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="@color/gray"
                tools:text="Ans B"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_m"
                android:id="@+id/btn1" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="@color/gray"
                tools:text="Ans C"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_m"
                android:id="@+id/btn2" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="@color/gray"
                tools:text="Ans D"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_m"
                android:id="@+id/btn3" />

            <Button
                android:layout_width="180dp"
                style="@style/redButton"
                android:textSize="@dimen/text_m"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:text="@string/salajengna"
                android:layout_gravity="end"
                android:id="@+id/next_btn" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>











