...
    <string name="soal">Pananyaan</string>
    <string name="quiz_slug">Jawab pertanyaana, kanggo ngumpulkeun poinna!</string>
    <string name="salajengna">Salajengna</string>
    <string name="tulis_nama">Tulis nami anjeun di dieu</string>
    <string name="press_button">Pencet tombol ieu upami atos rengse</string>
    <string name="next">Lajengkeun</string>
    <string name="finish">Rengse</string>
    <string name="sorangan">Lemes ka sorangan:</string>
    <string name="batur">Lemes ka batur:</string>
    <string name="loma">Basa loma:</string>
    <string name="b_indonesia">Indonesia:</string>
    <string name="inggris">Inggris:</string>
    <string name="nami_panggilan">Nami Panggilan:</string>
...
